test/bad/arrays/decl07.px

a = [['a']]
[[[[String]]]] a' = [[[['x']], a]]
